--- a/memory-game.html
+++ b/memory-game.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Memory Game</h1>
 
-    <!-- Memory game content goes here -->
+    <div class="memory-game" id="memoryGame"></div>
 
     <script src="memory-game.js"></script>
 </body>
