--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         <p>Click to start Logic Challenges</p>
     </div>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
